--- a/AndroidApp/res/layout/activity_main.xml
+++ b/AndroidApp/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/textViewStatus"
+                android:id="@+id/tvBlink"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp" />
+                android:layout_height="match_parent"
+                android:text="@string/blink_on_off"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <ToggleButton
                 android:id="@+id/toggleButtonBlink"
